Update content posts with more tag for better preview

--- a/content/posts/20240701.md
+++ b/content/posts/20240701.md
@@ -1,10 +1,11 @@
 ---
-type: note
 title: "20240701"
 date: 2024-07-01T00:37:24+09:00
 ---
 
 37signalsのサイト「Once」では、[Writebook](https://once.com/writebook)というアプリケーションが無料で提供されています。
+
+<!--more-->
 
 ![Writebook](/images/writebook-01.webp)
 
