--- a/content/posts/20240714.md
+++ b/content/posts/20240714.md
@@ -1,10 +1,11 @@
 ---
-type: note
 title: "20240714"
 date: 2024-07-14T20:26:26+09:00
 ---
 
 UPSのバッテリー交換から、LANケーブルの差し替えなどを経て、久しぶりにルーターを初期化した。
+
+<!--more-->
 
 その過程で普段使っていたpiholeを初期化せざるを得なかった。
 
