--- a/content/posts/20240820.md
+++ b/content/posts/20240820.md
@@ -1,10 +1,11 @@
 ---
-type: note
 title: "20240820"
 date: 2024-08-20T21:41:02+09:00
 ---
 
 Raspberry Pi 5が発売されたようだ。
+
+<!--more-->
 
 さすがにこの円安の割高感に加えてシングルボードコンピュータの選択肢が増えつつあるこのご時世でわざわざRaspberry Piを買うか、いや買うまいかと悩んでいる。
 
