--- a/content/posts/20240809.md
+++ b/content/posts/20240809.md
@@ -1,10 +1,11 @@
 ---
-type: note
 title: "20240809"
 date: 2024-08-09T13:26:28+09:00
 ---
 
 今日は夏休みなので腰を据えてプログラムを書こうと思っていた。
+
+<!--more-->
 
 現実はメールサーバーを構築する必要性に駆られている。
 
