Update post title to include motivation for learning Rust in Japanese

--- a/content/posts/20241027.md
+++ b/content/posts/20241027.md
@@ -1,11 +1,13 @@
 ---
-title: "Rustを学習するモチベーション"
+title: "普段Rubyばかりの私がRustを学習するモチベーション"
 date: "2024-10-27T19:19:27+09:00"
 ---
 
 私の経歴は一部を除いて基本的にRailsで埋め尽くされている。
 一時期Node.JSに乗り換えようとJavaScriptやTypeScriptばかり書いていた時期もあった。
 それからReactに疲れて、Rails 7に出会ってからはかれこれずっとRubyばかり書いている。
+
+<!--more-->
 
 私にとってRubyそのものはとても楽しい言語である。
 Railsでデザインパターンを学ぶことでモチベーションは保てている。
