chore: Add simple virtual machine for cron-based rsync backup

--- a/content/posts/20241124.md
+++ b/content/posts/20241124.md
@@ -22,3 +22,6 @@ date: "2024-11-24T14:44:18+09:00"
 
 可能であればアプリケーションの作成を単一のコマンドで行えるように、リストアも単一のコマンドでできるようにしたい。
 ディスクの容量は余裕がある、というかかなり持て余しているのでこのあたりそろそろ考えていきたいと思っている。
+
+ひとまずterraformとは別の仮想マシンを作成して、そのマシンがcron経由でrsyncを実行するくらいの単純さでよいと思う。
+差分バックアップとかも不要で、データベースとファイルのみでよい。
